src/objects/Sales_Area_Information__c.object
<CustomObject>
    <description>Child object of Account. Stores information per Sales Area for each account.</description>
    <fields>
        <fullName>Account_Assignment_Group__c</fullName>
        <label>Account Assignment Group</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Text field to be populated by workflow to ensure Sales Area Information records are returned when user searches on Account Name in global search</description>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Sales_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active_for_this_Sales_Area__c</fullName>
        <formula>IF( ISPICKVAL(Type__c , &quot;Customer&quot;), 
IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Active&quot;), 
IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Not Active&quot;))</formula>
        <label>Active for this Sales Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisory_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advisory Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Customer_Segment__c</fullName>
        <label>Business Customer Segment</label>
        <picklist>
            <controllingField>Sales_Area__c</controllingField>
            <picklistValues>
                <fullName>BtB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BtC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BtG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BtBtC</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Change_Sub_Segment_Sales_Mode__c</fullName>
        <label>Change Sub Segment/Sales Mode</label>
        <picklist>
            <picklistValues>
                <fullName>1A+Get</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1B+Get</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1C+Get</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1D+Get</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2A+Get</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2B+Get</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2C+Get</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2D+Get</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3A+Get</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3B+Get</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3C+Get</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3D+Get</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4A+Get</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4B+Get</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4C+Get</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4D+Get</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1A+Grow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1B+Grow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1C+Grow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1D+Grow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2A+Grow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2B+Grow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2C+Grow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2D+Grow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3A+Grow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3B+Grow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3C+Grow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3D+Grow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4A+Grow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4B+Grow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_Top_Segment__c</fullName>
        <label>Change Top Segment</label>
        <picklist>
            <picklistValues>
                <fullName>KA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Registration_Number__c</fullName>
        <label>Corporate Registration Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <label>Customer Group</label>
        <picklist>
            <controllingField>Sales_Area__c</controllingField>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Segment__c</fullName>
        <label>Customer Service Segment</label>
        <picklist>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_is_using_transport_system__c</fullName>
        <label>Customer is using transport system</label>
        <picklist>
            <controllingField>Sales_Area__c</controllingField>
            <picklistValues>
                <fullName>Web-pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PacSoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delis Print Netværk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My Delis Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated solution (own system)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DK_Postbox_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Postboks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>D_gnposten__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pakkeboksen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Datascan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Datascan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Priority__c</fullName>
        <label>Delivery Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>37</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>38</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Partner_Type__c</fullName>
        <label>External Partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>Media Bureau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign Post Office</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hemmelig_adresse_flytning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hemmelig adresse/flytning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Format__c</fullName>
        <label>Invoice Format</label>
        <picklist>
            <picklistValues>
                <fullName>Z01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_Frequence__c</fullName>
        <label>Invoice Frequence</label>
        <picklist>
            <controllingField>Sales_Area__c</controllingField>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZZ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_List_Schedule__c</fullName>
        <label>Invoice List Schedule</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Reference__c</fullName>
        <label>Invoice Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Specification_Format__c</fullName>
        <label>Invoice Specification Format</label>
        <picklist>
            <picklistValues>
                <fullName>Z01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z33</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z40</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_Specification_Frequency__c</fullName>
        <label>Invoice Specification Frequency</label>
        <picklist>
            <controllingField>Sales_Area__c</controllingField>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZZ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoicing_Fee_Applicable__c</fullName>
        <label>Invoicing Fee Applicable</label>
        <picklist>
            <picklistValues>
                <fullName>Z01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z02</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Involved_Party_ID__c</fullName>
        <label>Involved Party ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_First_SAI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is only set to true if the SAI has been created by the new Account trigger that is creating a SAI on the Account. This is used by CINT to identify if the SAI has been created when a SAI was created or if it is added afterwards.</description>
        <label>Is First SAI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kl_10_levering__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kl. 10 levering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Largest_User__c</fullName>
        <label>Largest User</label>
        <picklist>
            <controllingField>Sales_Area__c</controllingField>
            <picklistValues>
                <fullName>ERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KUL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_PN_Synchronized_Date__c</fullName>
        <label>Last PN Synchronized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Logistic_Customer__c</fullName>
        <label>Logistic Customer</label>
        <picklist>
            <controllingField>Sales_Area__c</controllingField>
            <picklistValues>
                <fullName>Is LOG DK Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Is DPD Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Is both LOG DK and DPD Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mail_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mail Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Attributes__c</fullName>
        <description>Marketing Attributes for LO DK</description>
        <label>Marketing Attributes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Midlertidige_flytninger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Midlertidige flytninger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Modtagerflex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Modtagerflex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nej_tak_til_reklamer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nej tak til reklamer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nej_tak_til_reklamer_og_gratisaviser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nej tak til reklamer og gratisaviser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opbevaring_af_post__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opbevaring af post</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_Mark_As_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN_Mark_As_Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_Synchronization_ErrorReasonCode__c</fullName>
        <label>PN Synchronization ErrorReasonCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PN_Synchronization_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN Synchronization Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_Synchronized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN Synchronized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <controllingField>Sales_Area__c</controllingField>
            <picklistValues>
                <fullName>DK+1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK+3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK+5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK+A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK+C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK+D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK+E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK+H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK+I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK+K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK+L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK+M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK+N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK+O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK+P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK+R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK+S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK+X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI+A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI+C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI+D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI+H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI+I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI+L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI+M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI+N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI+P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI+U</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI+X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE+A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <picklist>
            <controllingField>Sales_Area__c</controllingField>
            <picklistValues>
                <fullName>0001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z035</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z045</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z055</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z061</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z066</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z070</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>